frontend/app/scss/pages/_map.scss
.map-page {
  .cta-wrapper {
    @include media($mobile) {
      float: right;
    }
    text-align: center;
    float: right;
    vertical-align: top;
    .detail {
      @include media($mobile) {
        display: none;
      }
      display: block;
      clear: both;
      margin-top: 0.5rem;
    }
  }

  .schedule-filters {
    margin: 0 0;
    text-align: center;
    .selection {
      text-transform:uppercase;
      display: inline-block;
      color: $color-sidebar-filter-text;
      text-align: center;
      border-radius: 5px;
      padding: 0.25rem;
      cursor: pointer;
      @include user-select(none);
      @include media($mobile) {
        font-size: 1.25rem;
      }
      @include media($desktop) {
        font-size: 1.5rem;
      }

      &:hover {
        background-color: $color-sidebar-filter-text;
        color: $color-sidebar-background;
      }
      &.active {
        color: $color-sidebar-background;
        background-color: $color-sidebar-filter-active;
      }
      &.active:hover {
        color: $color-sidebar-background;
        background-color: $color-sidebar-filter-active;
      }
      &.active:hover {
        color: $color-sidebar-background;
        background-color: $color-sidebar-filter-active;
      }
    }
  }

  .list {
    .selection {
      .distance {
        display: block;
      }
    }
  }
}

